Fixed an issue where flow of the media grid would be disrupted in the medium two-column view if titles were too long.

--- a/localtv/static/localtv/front/sass/partials/modules/_media_grid.sass
+++ b/localtv/static/localtv/front/sass/partials/modules/_media_grid.sass
@@ -38,6 +38,10 @@
 		@media screen and (max-width: $small-viewport-max) and (min-width: $tiny-viewport-max)
 			width: 50%
 			float: left
+			&:nth-child(even)
+				float: right
+			&:nth-child(odd)
+				clear: left
 		@media screen and (max-width: $tiny-viewport-max)
 			width: 100%
 			float: none
